tests/compile-fail/zst2.stderr
error: Undefined Behavior: pointer to alloc970 was dereferenced after this allocation got freed
  --> $DIR/zst2.rs:14:14
   |
LL |     unsafe { *x = zst_val; } //~ ERROR dereferenced after this allocation got freed
   |              ^^^^^^^^^^^^ pointer to alloc970 was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/zst2.rs:14:14

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

